# multiagent-pathfinding

./: .gitignore  CMakeLists.txt  README.md
src/: AStar.cpp  AStar.h  Agent.cpp  Agent.h  CBS.cpp  CBS.h  DebuggingUtils.cpp  DebuggingUtils.h  Manager.cpp  Manager.h  Map.cpp  Map.h  main.cpp
tests/: README.md
tests/maps/: maze-32-32-4.map
tests/scenarios/maze-32-32-2/: maze-32-32-2-even-1.scen
